<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="State"
        android:padding="16dp"
        android:layout_gravity="start"
        android:layout_weight="1.75"
        android:id="@+id/state_list_item"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:padding="16dp"
        android:text="Candidate"
        android:textSize="16sp"
        android:textAlignment="center"
        android:id="@+id/candidate_list_item"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="Probability"
        android:padding="16dp"
        android:layout_gravity="end"
        android:layout_weight="1"
        android:textAlignment="textEnd"
        android:id="@+id/probability_list_item"/>
</LinearLayout>